src/styles/scss/layout/header.module.scss
.container {
  position: fixed;
  width: 100%;
  background-color: #fff;
  height: 60px;
  padding: 0px 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: .3);

  h1 {
    &:hover {
      cursor: pointer;
    }
  }

  li {
    list-style-type: none;
    display: flex;

    ul {
      padding: 0px 20px;
      font-weight: 600;

      h4 {
        transition: .1s;
        
        &:hover {
          color: red;
          text-decoration: underline;
          cursor: pointer;
        }
      }
    }
  }
}

